modificacion con animaciones en menu buscar

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="5000">
-                <img src="images/slide-1.jpg" class="d-block w-100" alt=" ...">
+            <div class="carousel-item active" data-bs-interval="3000">
+                <img src="images/slide - promo-oct.jpg" class="d-block w-100" alt=" ...">
                 <div class="carousel-caption d-none d-md-block carousel-caption-color: red">
-                    <p>Honda CRV - HRV - CITY. Ahora con tasa especial.</p>
+                    <p>Honda CRV - Ahora con tasa especial.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
@@ -106,7 +106,7 @@
     <!-- =================== -->
     <!-- TEXTO PRINCIPAL -->
     <!-- =================== -->
-    <section class="w-50 mx-auto  pt-5" id="principal">
+    <section class="w-50 mx-auto" id="principal">
         <h1 class="p-4 fs-4 border-3 border-top text-sm-center">Sitio Web dedicado a la comercialización de autos nuevos
             <strong><span>Honda.</span></strong>
         </h1>
