--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- --- SEO ---  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Vehiculos, autos, coches, agencias de autos, automotor, Honda">
+    <meta name="description" content="Página dedicada a la comercialización de autos Honda en el Sureste Mexicano">
+    <!-- --- FIN DEL SEO ---  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -54,55 +59,44 @@
         </div>
     </nav>
     <section class="divisor"></section>
-    <!-- =================== -->
-    <!-- PROMOCIONES -->
-    <!-- =================== -->
+
     <!-- =================== -->
     <!-- TARJETA 1 -->
     <!-- =================== -->
-    <div class="container-prom">
-
-        <div class="tarjeta tarjeta-1">
-            <div class="tarjeta-header">
-                <img src="../images/promo/promocion1.jpg" class="tarjeta-img">
-            </div>
-            <div class="tarjeta-body">
-                <h3 class="tarjeta-local">Honda Odyssey</h3>
-                <h2 class="tarjeta-titulo">Estribos con luz</h2>
-                <p class="tarjeta-texto">40% de descuento en estribos con luz para Honda Pilot modelo 2017-2022.
-                    Vigencia del 01 de febrero de 2022 hasta agotar existencias. Aplican restricciones. NO incluye mano
-                    de
-                    obra de instalación. Para más información visite a su Distribuidor autorizado Honda® más cercano</p>
-            </div>
-            <div class="tarjeta-footer">
-                <a href="#">Mas información</a>
+    <div class="row row-cols-1 row-cols-md-2 g-2">
+        <div class="col">
+            <div class="card h-100">
+                <img src="/images/promo/promocion1.jpg" class="card-img-top" alt="Foto promo">
+                <div class="card-body">
+                    <h5 class="card-title">Honda Odyssey /
+                        Estribos con luz</h5>
+                    <p class="card-text">40% de descuento en estribos con luz para Honda Pilot modelo 2017-2022.
+                        Vigencia del 01 de febrero de 2022 hasta agotar existencias. Aplican restricciones. NO incluye
+                        mano de obra de instalación. Para más información visite a su Distribuidor autorizado Honda® más
+                        cercano
+                        .</p>
+                </div>
             </div>
         </div>
-
-        <!-- =================== -->
         <!-- TARJETA 2 -->
         <!-- =================== -->
-        <div class="tarjeta tarjeta-2">
-            <div class="tarjeta-header">
-                <img src="../images/promo/promocion2.jpg" class="tarjeta-img">
-            </div>
-            <div class="tarjeta-body">
-                <h3 class="tarjeta-local">Honda Pilot 2023</h3>
-                <h2 class="tarjeta-titulo">Estribos con luz</h2>
-                <p class="tarjeta-texto">$729.99 servicio de mantenimiento de quemacocos.
-                    El Servicio incluye: limpieza del bastidor, sopleteado de líneas de desagüe, lubricación de rieles y
-                    mecanismos, y confirmación del correcto desagüe. Aplica para todos los modelos Honda con Quemacocos.
-                    *El
-                    precio incluye mano de obra, materiales e impuestos, no incluye trabajos adicionales a lo
-                    especificado
-                    en el servicio. Aplican restricciones. Vigencia del 26 de junio de 2023 al 31 de octubre de 2023.
-                </p>
-            </div>
-            <div class="tarjeta-footer">
-                <a href="#">Mas información</a>
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="/images/promo/promocion2.jpg" class="card-img-top" alt="Foto promo">
+                <div class="card-body">
+                    <h5 class="card-title">Honda Pilot 2023 / Estribos con luz</h5>
+                    <p class="card-text">$729.99 servicio de mantenimiento de quemacocos. El Servicio incluye: limpieza
+                        del bastidor, sopleteado de líneas de desagüe, lubricación de rieles y mecanismos, y
+                        confirmación del correcto desagüe. Aplica para todos los modelos Honda con Quemacocos. *El
+                        precio incluye mano de obra, materiales e impuestos, no incluye trabajos adicionales a lo
+                        especificado en el servicio. Aplican restricciones. Vigencia del 26 de junio de 2023 al 31 de
+                        octubre de 2023..</p>
+                </div>
             </div>
         </div>
     </div>
+
 
 
     <!-- =================== -->
@@ -192,7 +186,8 @@
                         <p class="presentacion">Hola soy tu asesor profesiona Israel Ortiz de la marca de
                             autos Honda en
                             el Sureste Mexicano.
-                            Me encuentro en la ciudad de Mérida Yucatán, México. Estoy aquí para juntos poder encontrar
+                            Me encuentro en la ciudad de Mérida Yucatán, México. Estoy aquí para juntos poder
+                            encontrar
                             la mejor opción de vehículo de acuerdo a tus gustos y necesidades. Permiteme
                             <span>asesorarte </span>
                         </p>
