--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <!-- --- SEO ---  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inicio.</title>
+    <meta name="keywords" content="Vehiculos, autos, coches, agencias de autos, automotor, Honda">
+    <meta name="description" content="Página dedicada a la comercialización de autos Honda en el Sureste Mexicano">
+    <!-- --- FIN DEL SEO ---  -->
+    <meta name="author" content="Israel Ortiz">
+    <title>Inicio</title>
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -24,7 +29,7 @@
     <!-- =================== -->
     <!-- NAVBAR -->
     <!-- =================== -->
-    <nav class="navbar fixed-top navbar-expand-lg p-3 navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg p-3 bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Israel Honda Montejo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
