--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!-- --- SEO ---  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Vehiculos, autos, coches, agencias de autos, automotor, Honda">
+    <meta name="description" content="Página dedicada a la comercialización de autos Honda en el Sureste Mexicano">
+    <!-- --- FIN DEL SEO ---  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -127,7 +133,7 @@
         <img src="../images/social/wap-social.png" alt="" width="100px"><i class="icono-whats"> </i>
     </a>
 
-  <!-- =================== -->
+    <!-- =================== -->
     <!-- FOOTER -->
     <!-- =================== -->
     <section>
