ultimos detalles en css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- =================== -->
     <!-- NAVBAR -->
     <!-- =================== -->
-    <nav class="navbar fixed-top navbar-expand-lg p-3 bg-body-tertiary">
+    <nav class="navbar fixed-top navbar-expand-lg p-3 navbar-light bg-danger" tex>
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Israel Honda Montejo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,7 +60,7 @@
 
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <input class="form-control me-2 bg-body-secondary" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-success" type="submit">buscar</button>
                 </form>
             </div>
